# controllers/report_c.js
@@ -50,7 +50,11 @@ reportController.getReportsByUser = async function (req, res) {
   const targetString = String(req.params.animal_id);
   const target = new ObjectId(targetString);
   try {
-    const result = await db.getDatabase().db('WildlifeAPI').collection('Reports').find({user_id: target});
+    const result = await db
+      .getDatabase()
+      .db('WildlifeAPI')
+      .collection('Reports')
+      .find({ user_id: target });
     result.toArray().then((reports) => {
       res.setHeader('Content-Type', 'application/json');
       res.status(StatusCodes.OK).json(reports);
@@ -92,6 +96,36 @@ reportController.addReport = async function (req, res) {
 };
 
 // - PUT /reports/:id
+
+reportController.editReport = async function (req, res) {
+  // #swagger.tags = ['Reports']
+  // #swagger.responses[200] = {description: "Success"}
+  // #swagger.responses[500] = {description: "Internal Server Error"}
+  const reportId = ObjectId.createFromHexString(req.params.id);
+
+  const reportEdits = {
+    user_id: req.body.user_id,
+    observation_id: req.body.observation_id,
+    date: req.body.date,
+    time: req.body.time,
+    weather: req.body.weather
+  };
+
+  try {
+    const database = await db.getDatabase();
+    const reportCollection = database.db('WildlifeAPI').collection('Reports');
+
+    const result = await reportCollection.replaceOne({ _id: reportId }, reportEdits);
+    if (result.modifiedCount) {
+      console.log('Report Database Changed');
+    } else {
+      console.log('Error, report database unchanged');
+    }
+    return res.status(StatusCodes.OK).json(result);
+  } catch (error) {
+    return res.status(StatusCodes.INTERNAL_SERVER_ERROR).json({ error: 'Failed to edit report' });
+  }
+};
 
 // - DELETE /reports/:id
 reportController.deleteReportById = async function (req, res) {
