# routes/observation_r.js
@@ -5,24 +5,36 @@ const validate = require('../utilities/js/validation.js');
 
 router.get('/', observationController.getAllObservations);
 
-router.get('/:id',
-    validate.idRule(),
-    validate.checkId,
-    observationController.getOneObservation);
+router.get('/:id', validate.idRule(), validate.checkId, observationController.getOneObservation);
 
-router.get('/by-animal/:animal_id',
-    validate.animalIdRule(),
-    validate.checkId,
-    observationController.getObservationsByAnimal);
+router.get(
+  '/by-animal/:animal_id',
+  validate.animalIdRule(),
+  validate.checkId,
+  observationController.getObservationsByAnimal
+);
 
-router.post('/',
-    validate.observationRules(),
-    validate.checkObservation,
-    observationController.addObservation);
+router.post(
+  '/',
+  validate.observationRules(),
+  validate.checkObservation,
+  observationController.addObservation
+);
 
-router.delete('/:id',
-    validate.idRule(),
-    validate.checkId,
-    observationController.deleteObservationById);
+router.put(
+  '/:id',
+  validate.observationRules(),
+  validate.checkObservation,
+  validate.idRule(),
+  validate.checkId,
+  observationController.editObservation
+);
+
+router.delete(
+  '/:id',
+  validate.idRule(),
+  validate.checkId,
+  observationController.deleteObservationById
+);
 
 module.exports = router;
